; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_report_deadlock.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_report_deadlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@pgStatSock = common dso_local global i64 0, align 8
@PGINVALID_SOCKET = common dso_local global i64 0, align 8
@pgstat_track_counts = common dso_local global i32 0, align 4
@PGSTAT_MTYPE_DEADLOCK = common dso_local global i32 0, align 4
@MyDatabaseId = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pgstat_report_deadlock() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = load i64, i64* @pgStatSock, align 8
  %3 = load i64, i64* @PGINVALID_SOCKET, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @pgstat_track_counts, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %5, %0
  br label %16

9:                                                ; preds = %5
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %11 = load i32, i32* @PGSTAT_MTYPE_DEADLOCK, align 4
  %12 = call i32 @pgstat_setheader(i32* %10, i32 %11)
  %13 = load i32, i32* @MyDatabaseId, align 4
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = call i32 @pgstat_send(%struct.TYPE_3__* %1, i32 8)
  br label %16

16:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @pgstat_setheader(i32*, i32) #1

declare dso_local i32 @pgstat_send(%struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
